# metal

./: CMakeLists.txt  MetalMain.cpp
include/ADT/: AlignOf.hpp  ErrorOr.hpp  IteratorRange.hpp  StringRef.hpp  StringSwitch.hpp
include/AST/: Expression.hpp  Statement.hpp
include/Basic/: MemoryBuffer.hpp  SourceLocation.hpp  SourceManager.hpp
include/Parse/: Lexer.hpp  Parser.hpp  Token.hpp  TokenKind.def  TokenKind.hpp
include/Support/: Diagnostic.hpp  DiagnosticEngine.hpp  DiagnosticList.def
lib/Basic/: MemoryBuffer.cpp  SourceManager.cpp
lib/Parse/: Lexer.cpp  Parser.cpp
lib/Support/: Diagnostic.cpp  DiagnosticEngine.cpp
samples/: BufferTest.mtl
